[project]
name = "dji-repack"
version = "0.1.0"
description = "Reassemble DJI Air3 drone footage split across multiple MP4 files back into one merged clip per recording, with SRT telemetry preserved."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[project.scripts]
dji-repack = "dji_repack.cli:main"
dji-repack-gui = "dji_repack.gui:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["dji_repack*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
